--- a/templates/experiment/new.html
+++ b/templates/experiment/new.html
@@ -16,25 +16,25 @@
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,jQuery,CSS,HTML,RWD,Dashboard">
     <title>BIT Cloud Lab</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- Main styles for this application-->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="/js/vue-2.6.11.js"></script>
     <script src="/js/axios.min.js"></script>
     <script src="/js/vue-cookies.js"></script>
@@ -54,63 +54,63 @@
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
             </svg> Dashboard
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="/experiment/list">
+          <a class="c-sidebar-nav-link" href="experiment/list">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
             </svg> Experiments
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="/specimen/list">
+          <a class="c-sidebar-nav-link" href="specimen/list">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
             </svg> Specimen
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="/material/list">
+          <a class="c-sidebar-nav-link" href="material/list">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-drop1"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-drop1"></use>
             </svg> Material
           </a>
         </li>
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-chart-pie"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-chart-pie"></use>
             </svg> Predict
           </a>
         </li>
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
             </svg> Compare
           </a>
         </li>
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-calculator"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-calculator"></use>
             </svg> Algorithm
           </a>
         </li>
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-star"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-star"></use>
             </svg> Online Analysis
           </a>
         </li>
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bug"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-bug"></use>
             </svg> Online Experiments
           </a>
         </li>
@@ -121,13 +121,13 @@
       <header class="c-header c-header-light c-header-fixed c-header-with-subheader">
         <button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar" data-class="c-sidebar-show">
           <svg class="c-icon c-icon-lg">
-            <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
+            <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
           </svg>
         </button><a class="c-header-brand d-lg-none" href="main">
           <img width="140" height="46" alt="CloudLab Logo" src="/assets/brand/bit-cloud-lab.png">
         <button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true">
           <svg class="c-icon c-icon-lg">
-            <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
+            <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
           </svg>
         </button>
         <ul class="c-header-nav d-md-down-none">
@@ -138,15 +138,15 @@
         <ul class="c-header-nav ml-auto mr-4">
           <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="main">
               <svg class="c-icon">
-                <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
+                <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
               </svg></a></li>
           <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="main">
               <svg class="c-icon">
-                <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-list-rich"></use>
+                <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-list-rich"></use>
               </svg></a></li>
           <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="main">
               <svg class="c-icon">
-                <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
+                <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
               </svg></a></li>
           <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="main" role="button" aria-haspopup="true" aria-expanded="false">
               <div class="c-avatar"><img class="c-avatar-img" src="/assets/img/avatars/6.jpg" alt="user@email.com"></div>
@@ -154,36 +154,36 @@
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <div class="dropdown-header bg-light py-2"><strong>Account</strong></div><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
                 </svg> Updates<span class="badge badge-info ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
                 </svg> Messages<span class="badge badge-success ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-task"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-task"></use>
                 </svg> Tasks<span class="badge badge-danger ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-comment-square"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-comment-square"></use>
                 </svg> Comments<span class="badge badge-warning ml-auto">42</span></a>
               <div class="dropdown-header bg-light py-2"><strong>Settings</strong></div><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-user"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-user"></use>
                 </svg> Profile</a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
                 </svg> Settings</a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-credit-card"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-credit-card"></use>
                 </svg> Payments<span class="badge badge-secondary ml-auto">42</span></a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-file"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-file"></use>
                 </svg> Projects<span class="badge badge-primary ml-auto">42</span></a>
               <div class="dropdown-divider"></div><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-lock-locked"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-lock-locked"></use>
                 </svg> Lock Account</a><a class="dropdown-item" href="main">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="/vendors/@coreui/icons/svg/free.svg#cil-account-logout"></use>
+                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-account-logout"></use>
                 </svg> Logout</a>
             </div>
           </li>
@@ -192,7 +192,7 @@
           <!-- Breadcrumb-->
           <ol class="breadcrumb border-0 m-0">
             <li class="breadcrumb-item"><a href="main">Home</a></li>
-            <li class="breadcrumb-item"><a href="/experiment/list">Experiments List</a></li>
+            <li class="breadcrumb-item"><a href="experiment/list">Experiments List</a></li>
             <li class="breadcrumb-item active">New Experiment</li>
             <!-- Breadcrumb Menu-->
           </ol>
